[iOS] Adjust top/bottom insets of Popup Menu

The bottom insets of the popup menus were wrong because of a rounding
error. This CL adjusts it by rounding at the end of the additions
instead of doing everytime a new element is computed.

Bug: 850516
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: Ic99c3d71e1f7d8a0b47a3e6453242d4a36007e66
Reviewed-on: https://chromium-review.googlesource.com/1174253
Commit-Queue: Stepan Khapugin <stkhapugin@chromium.org>
Reviewed-by: Stepan Khapugin <stkhapugin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582902}
Former-commit-id: 5202b90d8de13309d30bbc60be18f20be19f7276